# DragonWing-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
config/: dragonwing-ble-bridge.service  dragonwing-spi-router.service
crates/dragonwing-crypto/: Cargo.toml  README.md
crates/dragonwing-crypto/c/: chacha20poly1305.c  chacha20poly1305.h
crates/dragonwing-crypto/src/: hash.rs  lib.rs  rng.rs
crates/dragonwing-crypto/src/classical/: chacha20poly1305.rs  ed25519.rs  mod.rs  x25519.rs  xchacha20poly1305.rs
crates/dragonwing-crypto/src/experimental/: mod.rs  saga_xwing.rs
crates/dragonwing-crypto/src/experimental/pq_ratchet/: chunking.rs  encrypt.rs  kdf.rs  message.rs  mod.rs  psa_storage.rs  saga_auth.rs  serialize.rs  state.rs  xwing_ratchet.rs
crates/dragonwing-crypto/src/post_quantum/: mldsa.rs  mlkem.rs  mod.rs  xwing.rs
crates/dragonwing-crypto/src/psa/: crypto.rs  its.rs  mod.rs  saga.rs  storable.rs  types.rs  xwing.rs
crates/dragonwing-crypto/src/saga/: mod.rs
crates/dragonwing-i2c/: Cargo.toml  README.md
crates/dragonwing-i2c/c/: i2c.c  i2c.h
crates/dragonwing-i2c/src/: ffi.rs  lib.rs
crates/dragonwing-led-matrix/: Cargo.toml  README.md
crates/dragonwing-led-matrix/src/: animation.rs  ffi.rs  frame.rs  lib.rs
crates/dragonwing-remote-iot/: Cargo.toml
crates/dragonwing-remote-iot/src/: bpp.rs  bridge.rs  camera_server.rs  error.rs  http.rs  lib.rs  otp.rs  protocol.rs  qr.rs  server.rs  websocket.rs
crates/dragonwing-rpc/: Cargo.toml  README.md
crates/dragonwing-rpc/src/: bridge.rs  client.rs  lib.rs  protocol.rs
crates/dragonwing-secure-relayer/: Cargo.toml  README.md
crates/dragonwing-secure-relayer/src/: error.rs  lib.rs  protocol.rs  ratchet_session.rs  transport.rs
crates/dragonwing-secure-relayer/tests/: integration_test.rs
crates/dragonwing-spi/: Cargo.toml  README.md
crates/dragonwing-spi-router/: Cargo.toml  README.md
crates/dragonwing-spi-router/src/: main.rs  rpc.rs
crates/dragonwing-spi/c/: spi_peripheral.c
crates/dragonwing-spi/src/: controller.rs  lib.rs  peripheral.rs
crates/dragonwing-zcbor/: Cargo.toml  README.md
crates/dragonwing-zcbor/src/: cose.rs  lib.rs
demos/host/pq-relayer-demo/: Cargo.toml
demos/host/pq-relayer-demo/src/: main.rs
demos/mcu/display-server/: CMakeLists.txt  Cargo.toml  prj.conf
demos/mcu/display-server/boards/: arduino_uno_q.overlay
demos/mcu/display-server/src/: lib.rs
demos/mcu/led-matrix-demo/: CMakeLists.txt  Cargo.toml
demos/mcu/led-matrix-demo/src/: lib.rs
demos/mcu/mlkem-demo/: CMakeLists.txt  Cargo.toml
demos/mcu/mlkem-demo/src/: lib.rs
demos/mcu/pqc-demo/: CMakeLists.txt  Cargo.toml
demos/mcu/pqc-demo/src/: lib.rs
demos/mcu/rpc-demo/: CMakeLists.txt  Cargo.toml
demos/mcu/rpc-server/: CMakeLists.txt  Cargo.toml
demos/mcu/rpc-server/src/: lib.rs
demos/mcu/secure-access/: CMakeLists.txt  Cargo.toml  README.md  prj.conf
demos/mcu/secure-access/src/: lib.rs  protocol.rs  ratchet_handler.rs
demos/mcu/spi-test/: CMakeLists.txt
demos/mcu/ssd1306-demo/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
demos/mcu/ssd1306-demo/boards/: arduino_uno_q.overlay
demos/mcu/ssd1306-demo/src/: lib.rs
demos/mpu/mlkem-client/: Cargo.toml
demos/mpu/mlkem-client/src/: main.rs
demos/mpu/pq-proxy/: Cargo.toml  README.md
demos/mpu/pq-proxy/src/: main.rs
demos/mpu/pqc-client/: Cargo.toml
demos/mpu/pqc-client/src/: main.rs
demos/mpu/remote-iot/: Cargo.toml
demos/mpu/remote-iot/src/: main.rs
demos/mpu/system-monitor/: Cargo.toml  README.md
demos/mpu/system-monitor/src/: main.rs
demos/mpu/weather-display/: Cargo.toml
demos/mpu/weather-display/src/: main.rs
docker/: Dockerfile
docs/: ARCHITECTURE.md  CRYPTOGRAPHY.md  GETTING_STARTED.md  SECURE_ACCESS.md
scripts/: setup-spi-buffer.sh
