# DragonWing-rs Workspace
#
# Rust libraries and demos for the Arduino Uno Q platform
# (STM32U585 MCU + QRB2210 Linux MPU)
#
# See README.md for documentation.

[workspace]
resolver = "2"

members = [
    # Core crates (publishable to crates.io)
    "crates/dragonwing-crypto",
    "crates/dragonwing-led-matrix",
    "crates/dragonwing-rpc",
    "crates/dragonwing-spi",
    "crates/dragonwing-spi-router",
    "crates/dragonwing-zcbor",

    # MPU demos (QRB2210 Linux) - can be built with cargo
    "demos/mpu/pqc-client",
    "demos/mpu/mlkem-client",
    "demos/mpu/weather-display",
]

# MCU demos are excluded from workspace builds because they require Zephyr SDK
# Build them with: make build-mcu DEMO=<demo-name>
exclude = [
    "demos/mcu/pqc-demo",
    "demos/mcu/led-matrix-demo",
    "demos/mcu/rpc-demo",
    "demos/mcu/rpc-server",
    "demos/mcu/mlkem-demo",
    "demos/mcu/spi-test",
]

# Exclude demos from default workspace builds (they have special build requirements)
# MCU demos require Docker/Zephyr, MPU demos require cross-compilation
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FeurJak/DragonWing-rs"
keywords = ["arduino", "embedded", "cryptography", "post-quantum", "zephyr"]
categories = ["embedded", "cryptography", "no-std"]

[workspace.dependencies]
# Internal crates
dragonwing-crypto = { path = "crates/dragonwing-crypto", version = "0.1.0" }
dragonwing-led-matrix = { path = "crates/dragonwing-led-matrix", version = "0.1.0" }
dragonwing-rpc = { path = "crates/dragonwing-rpc", version = "0.1.0" }
dragonwing-spi = { path = "crates/dragonwing-spi", version = "0.1.0" }
dragonwing-spi-router = { path = "crates/dragonwing-spi-router", version = "0.1.0" }
dragonwing-zcbor = { path = "crates/dragonwing-zcbor", version = "0.1.0" }

# Post-quantum crypto (pinned commit for reproducibility)
# Using FeurJak fork optimized for embedded systems
libcrux-iot-ml-kem = { git = "https://github.com/FeurJak/libcrux-iot", rev = "e223df3b37aa76298716c02d77b4d8af96fd2111", default-features = false }
libcrux-iot-ml-dsa = { git = "https://github.com/FeurJak/libcrux-iot", rev = "e223df3b37aa76298716c02d77b4d8af96fd2111", default-features = false }
libcrux-iot-sha3 = { git = "https://github.com/FeurJak/libcrux-iot", rev = "e223df3b37aa76298716c02d77b4d8af96fd2111" }
libcrux-secrets = "0.0.5"

# Classical crypto
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }

# Async runtime (MPU only)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Zephyr (MCU only, patched via build system)
zephyr = "0.1.0"
zephyr-build = "0.1.0"
zephyr-sys = "0.1.0"
