# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# DragonWing Remote IoT - Arduino IoT Companion App integration
#
# This crate provides connectivity to the Arduino IoT Remote app,
# allowing phones to connect and stream sensor data (camera, IMU, etc.)
# to the Arduino Uno Q board.
#
# Protocol:
# - QR code for device discovery (contains secret + WebSocket endpoint)
# - WebSocket for video/data streaming using BPP (Binary Peripheral Protocol)
# - BPP provides authentication (HMAC-SHA256) or encryption (ChaCha20-Poly1305)

[package]
name = "dragonwing-remote-iot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Arduino IoT Companion App integration for DragonWing"
keywords = ["arduino", "iot", "remote", "companion-app", "websocket"]
categories = ["embedded", "network-programming"]

[features]
default = []
# Enable RPC bridge to forward data to MCU
rpc-bridge = ["dragonwing-rpc", "rmpv"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# WebSocket server
tokio-tungstenite = "0.27"
futures-util = "0.3"

# HTTP server for video streaming
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# QR code generation
qrcode = "0.14"

# JSON for WebSocket messages
serde = { workspace = true, features = ["std", "derive"] }
serde_json = "1.0"

# Network utilities
local-ip-address = "0.6"

# Random for secret generation
rand = "0.9"

# Cryptography for BPP codec
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Optional: RPC bridge to MCU
dragonwing-rpc = { workspace = true, features = ["mpu"], optional = true }
rmpv = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio-test = "0.4"
